# OOP_DAW

./: .gitignore  Audio.cpp  Audio.hpp  AudioFactory.cpp  AudioFactory.hpp  CMakeLists.txt  Effect.cpp  Effect.hpp  FileAudio.cpp  FileAudio.hpp  Project.cpp  Project.hpp  Silence.cpp  Silence.hpp  Track.cpp  Track.hpp  Utils.cpp  Utils.hpp  main.cpp
Effects/: AmplifyEffect.cpp  AmplifyEffect.hpp  EffectOpeation.hpp  FadeInOperation.cpp  FadeInOperation.hpp
Generators/: Generator.cpp  Generator.hpp
documentation/html/: _amplify_effect_8cpp.html  _amplify_effect_8cpp__incl.map  _amplify_effect_8cpp__incl.md5  _amplify_effect_8hpp.html  _amplify_effect_8hpp.js  _amplify_effect_8hpp__dep__incl.map  _amplify_effect_8hpp__dep__incl.md5  _amplify_effect_8hpp__incl.map  _amplify_effect_8hpp__incl.md5  _amplify_effect_8hpp_source.html  _audio_8cpp.html  _audio_8cpp__incl.map  _audio_8cpp__incl.md5  _audio_8hpp.html  _audio_8hpp.js  _audio_8hpp__dep__incl.map  _audio_8hpp__dep__incl.md5  _audio_8hpp__incl.map  _audio_8hpp__incl.md5  _audio_8hpp_source.html  _audio_factory_8cpp.html  _audio_factory_8cpp__incl.map  _audio_factory_8cpp__incl.md5  _audio_factory_8hpp.html  _audio_factory_8hpp.js  _audio_factory_8hpp__dep__incl.map  _audio_factory_8hpp__dep__incl.md5  _audio_factory_8hpp__incl.map  _audio_factory_8hpp__incl.md5  _audio_factory_8hpp_source.html  _effect_8cpp.html  _effect_8cpp__incl.map  _effect_8cpp__incl.md5  _effect_8hpp.html  _effect_8hpp.js  _effect_8hpp__dep__incl.map  _effect_8hpp__dep__incl.md5  _effect_8hpp__incl.map  _effect_8hpp__incl.md5  (+268 more)
(+130 files in other folders)
